# gr1_soccer

./: .gitignore  PrintRobotStates.py  README.md  requirements.txt
GR1HW/: CMakeLists.txt
GR1HW/include/gr1_hardware/: GR1HW.h
GR1HW/src/: GR1HW.cpp
gr1_sdk/: CMakeLists.txt
gr1_sdk/include/gr1_hardware/: GR1HW.h
gr1_sdk/src/: GR1HW.cpp
src/gr1_hardware/gr1_hardware_interface/src/: GR1HW.cpp
src/gr1_motor_pctl/: CMakeLists.txt  motorlist.json  package.xml
src/gr1_motor_pctl/src/: gr1_motor_pctl.cpp
src/rl_s2r/: CMakeLists.txt  package.xml
src/rl_s2r/include/: rl_s2r.h
src/rl_s2r/policy/: policy_bl.pt
src/rl_s2r/src/: rl_s2r.cpp
src/rl_sim2real/: CMakeLists.txt
src/rl_sim2real/scripts/: sim2real.py
src/rl_sim2real/src/: test.cpp
